[AF] Validate profiles for each major version

Update the profiles' validities for each major version to keep up with
the possible changes in the Autofill Profile Validator logic.
See: go/autofill-use-validation

Bug: 899783
Change-Id: Ie1c52df4c13a5579eb5265bda1eea19d02c5b123
Reviewed-on: https://chromium-review.googlesource.com/c/1311085
Commit-Queue: Parastoo Geranmayeh <parastoog@google.com>
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Reviewed-by: Marc Treib <treib@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604927}
Former-commit-id: 0c915c4c1cdda7380df9205180ac240e242e767c